[package]
name = "fuse2rs"
version = "0.0.2"
edition = "2021"
license = "BSD-3-Clause"
authors = ["Benjamin Stürz <benni@stuerz.xyz"]
description = "FUSE2 bindings for Rust (mainly for OpenBSD)"
repository = "https://github.com/realchonk/fuse2rs"
rust-version = "1.74.0"
include = ["src/*", "tests/*", "examples/*", "build.rs", "LICENSE", "ChangeLog.md"]

[dependencies]
cfg-if = "1.0.0"
libc = "0.2.158"

[build-dependencies]
bindgen = "0.70.1"

[dev-dependencies]
assert_cmd = "2.0.16"
cfg-if = "1.0.0"
nix = { version = "0.29.0", features = ["dir", "fs"] }
tempfile = "3.12.0"
